--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -12,16 +12,16 @@ jobs:
     strategy:
       matrix:
         build_env:
-          - tag: "22.03.4"
-            pkgarch: mips_24kc
-            target: ath79
-            subtarget: nand
-            vermagic: "5c9be91b90bda5403fe3a7c4e8ddb26f"
-          - tag: "23.05.0"
+          - tag: "23.05.5 "
             pkgarch: mipsel_24kc
             target: ramips
             subtarget: mt7621
-            vermagic: "9c242f353867f49a96054ff8c9f2c460"
+            vermagic: "144de9e5c1a8813b724b14faa054d9f0"
+          - tag: "23.05.4"
+            pkgarch: mipsel_24kc
+            target: ramips
+            subtarget: mt7621
+            vermagic: "144de9e5c1a8813b724b14faa054d9f0"
           - tag: "23.05.2"
             pkgarch: mipsel_24kc
             target: ramips
