Update build-module.yml for SmartBoxGiga OWRT 24.10.02

--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -13,10 +13,10 @@ jobs:
       matrix:
         build_env:
           - tag: "24.10.2"
-            pkgarch: aarch64_cortex-a53
-            target: mediatek
-            subtarget: filogic
-            vermagic: "6a9e125268c43e0bae8cecb014c8ab03"
+            pkgarch: mipsel_24kc
+            target: ramips
+            subtarget: mt7621
+            vermagic: "ae7dcdf01cb63b83c64f5cb8d8960511"
             
     steps:
       - uses: actions/checkout@v4
